--- a/portfolio/src/main/resources/application.properties
+++ b/portfolio/src/main/resources/application.properties
@@ -6,6 +6,7 @@ quarkus.log.category."com.pluralsight.currencyexchange".level=DEBUG
 # gRPC (Currency microservice)
 quarkus.grpc.clients.currency.host=localhost
 quarkus.grpc.clients.currency.port=8082
+quarkus.grpc.clients.currency.test-port=8082
 quarkus.grpc.server.use-separate-server=false
 # REST (Trades microservice)
 quarkus.rest-client.trades.url=http://localhost:8083
