--- a/currency/src/main/resources/application.properties
+++ b/currency/src/main/resources/application.properties
@@ -12,4 +12,4 @@ quarkus.log.category."com.pluralsight.currencyexchange".level=DEBUG
 # Docker
 quarkus.container-image.group=currencyexchange
 quarkus.container-image.name=currency
-quarkus.container-image.tag=jvm
+quarkus.container-image.tag=latest
