--- a/portfolio/src/main/resources/application.properties
+++ b/portfolio/src/main/resources/application.properties
@@ -13,4 +13,4 @@ quarkus.log.category."com.pluralsight.currencyexchange".level=DEBUG
 # Docker
 quarkus.container-image.group=currencyexchange
 quarkus.container-image.name=portfolio
-quarkus.container-image.tag=jvm
+quarkus.container-image.tag=latest
