--- a/trades/src/main/resources/application.properties
+++ b/trades/src/main/resources/application.properties
@@ -10,4 +10,4 @@ quarkus.log.category."com.pluralsight.currencyexchange".level=DEBUG
 # Docker
 quarkus.container-image.group=currencyexchange
 quarkus.container-image.name=trades
-quarkus.container-image.tag=jvm
+quarkus.container-image.tag=latest
